@@ -10,6 +10,9 @@ What's New in Python 3.7.0 alpha 1?
 Core and Builtins
 -----------------
 
+- bpo-29859: Show correct error messages when any of the pthread_* calls in
+  thread_pthread.h fails.
+
 - bpo-29849: Fix a memory leak when an ImportError is raised during from import.
 
 - bpo-28856: Fix an oversight that %b format for bytes should support objects
